# bevy_ninepatch

./: Cargo.toml  README.md  deny.toml
examples/: README.md  change_size.rs  content.rs  full.rs  multi_content_with_content_map.rs  multi_content_with_system.rs  multiple_same_components.rs  plugin.rs
src/: lib.rs  ninepatch.rs  plugin.rs
