[package]
name = "bevy_ninepatch"
version = "0.7.0"
authors = ["François Mockers <mockersf@gmail.com>"]
edition = "2021"
description = "Displays 9-Patch UI elements in Bevy"
repository = "https://github.com/vleue/bevy_ninepatch"
homepage = "https://github.com/vleue/bevy_ninepatch"
documentation = "https://docs.rs/bevy_ninepatch"
keywords = ["bevy", "ninepatch"]
license = "MIT OR Apache-2.0"
readme = "README.md"
exclude = ["examples/*.png", "examples/*.gif", "*.png", "assets/"]

[dependencies.bevy]
version = "0.7"
default-features = false
features = [ "bevy_ui", "bevy_render", "bevy_sprite" ]


[features]
"examples" = [ "bevy/bevy_winit", "bevy/render", "bevy/png" ]

[[example]]
name = "change_size"
required-features = [ "examples" ]

[[example]]
name = "content"
required-features = [ "examples" ]

[[example]]
name = "full"
required-features = [ "examples" ]

[[example]]
name = "multi_content_with_content_map"
required-features = [ "examples" ]

[[example]]
name = "multi_content_with_system"
required-features = [ "examples" ]

[[example]]
name = "multiple_same_components"
required-features = [ "examples" ]

[[example]]
name = "plugin"
required-features = [ "examples" ]
